<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menu_secciones"
        android:checkableBehavior="single">
        <!--item
            android:id="@+id/navigation_item_mapa"
            android:icon="@drawable/ic_map_grey600_48dp"
            android:title="@string/menu_mapa"/>
        <item
            android:id="@+id/navigation_item_rutas"
            android:icon="@drawable/ic_navigation_grey600_48dp"
            android:title="@string/menu_rutas"/>
        <item
            android:id="@+id/navigation_item_noticias"
            android:icon="@drawable/ic_my_library_books_grey600_48dp"
            android:title="@string/tit_noticias"/-->
        <item
            android:id="@+id/navigation_item_favoritos"
            android:icon="@drawable/ic_book_grey600_48dp"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/navigation_item_guardar"
            android:icon="@drawable/ic_bookmark_outline_grey600_48dp"
            android:title="@string/menu_save" />
        <item
            android:id="@+id/navigation_item_historial"
            android:icon="@drawable/ic_history_grey600_48dp"
            android:title="@string/historial_titulo" />
    </group>

    <group
        android:id="@+id/menu_pref"
        android:checkableBehavior="none">

        <item
            android:id="@+id/navigation_item_preferencias"
            android:icon="@drawable/ic_settings_applications_grey600_48dp"
            android:title="@string/preferences" />
        <item
            android:id="@+id/navigation_item_fondo"
            android:icon="@drawable/ic_collections_grey600_48dp"
            android:title="@string/fondo_pantall" />
        <item
            android:id="@+id/navigation_item_exportar"
            android:icon="@drawable/ic_add_to_photos_grey600_48dp"
            android:title="@string/menu_export_qr" />


    </group>

    <item android:title="@string/preferencias_noticias_auto">
        <menu>

            <item
                android:id="@+id/switchNoticiasBus"
                android:title="@string/tab_noticias"
                app:actionLayout="@layout/switch_layout" />
            <item
                android:id="@+id/switchNoticiasTram"
                android:title="@string/tram_tw_txt"
                app:actionLayout="@layout/switch_layout" />
            <item
                android:id="@+id/switchNoticiasAlberApps"
                android:title="@string/alberapps"
                app:actionLayout="@layout/switch_layout" />

        </menu>
    </item>

</menu>