<!--
/**
 *  TiempoBus - Informacion sobre tiempos de paso de autobuses en Alicante
 *  Copyright (C) 2014 Alberto Montiel
 *
 *  based on code by The Android Open Source Project
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tiempobus="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/menu_ordenar_parada"
        android:orderInCategory="1"
        tiempobus:showAsAction="never"
        android:title="@string/ordenar_parada"/>
    <item
        android:id="@id/menu_ordenar_nombre"
        android:orderInCategory="2"
        tiempobus:showAsAction="never"
        android:title="@string/ordenar_nombre"/>
    <item
        android:id="@id/menu_exportar"
        android:orderInCategory="2"
        tiempobus:showAsAction="never"
        android:title="@string/exportar"/>
    <item
        android:id="@id/menu_importar"
        android:orderInCategory="2"
        tiempobus:showAsAction="never"
        android:title="@string/importar"/>
    <item
        android:id="@id/menu_exportar_drive"
        android:orderInCategory="2"
        tiempobus:showAsAction="never"
        android:title="@string/exportar_drive"/>
    <item
        android:id="@id/menu_importar_drive"
        android:orderInCategory="2"
        tiempobus:showAsAction="never"
        android:title="@string/importar_drive"/>


</menu>
