<!--
/**
 *  TiempoBus - Informacion sobre tiempos de paso de autobuses en Alicante
 *  Copyright (C) 2014 Alberto Montiel
 *
 *  based on code by The Android Open Source Project
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tiempobus="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/menu_cercanas_img"
        android:icon="@drawable/ic_place_white_24dp"
        android:orderInCategory="0"
        tiempobus:showAsAction="always"
        android:title="@string/cercanas"></item>
    <item
        android:id="@id/menu_satelite"
        android:icon="@drawable/ic_satellite_white_24dp"

        android:orderInCategory="1"
        tiempobus:showAsAction="always"
        android:title="@string/menu_search"></item>
    <item
        android:id="@id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="3"
        tiempobus:showAsAction="always"
        android:title="@string/menu_search"></item>
    <item
        android:id="@id/menu_search_online"
        android:orderInCategory="5"
        tiempobus:showAsAction="never"
        android:title="@string/mapa_lineas"></item>
    <item
        android:id="@id/menu_ida"
        android:orderInCategory="6"
        tiempobus:showAsAction="never"
        android:title="@string/mapa_vuelta"></item>
    <item
        android:id="@id/menu_vuelta"
        android:orderInCategory="7"
        tiempobus:showAsAction="never"
        android:title="@string/mapa_ida"></item>
    <item
        android:id="@id/menu_cercanas"
        android:orderInCategory="4"
        tiempobus:showAsAction="never"
        android:title="@string/cercanas"></item>
    <!--
    <item android:id="@id/menu_posicion" android:orderInCategory="1" android:title="@string/mapa_ida" android:showAsAction="always" android:icon="@drawable/device_access_location_found"></item>
    -->


</menu>
